force-app/main/default/objects/copadometrics__Connector_Settings__c/fields/copadometrics__Connector_Id__c.field-meta.xml
<CustomField>
    <fullName>copadometrics__Connector_Id__c</fullName>
    <label>Connector Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>