force-app/main/default/objects/copadometrics__Connector_Settings__c/fields/copadometrics__Is_Schema_Configured__c.field-meta.xml
<CustomField>
    <fullName>copadometrics__Is_Schema_Configured__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Schema Configured?</label>
    <type>Checkbox</type>
</CustomField>