force-app/main/default/objects/copadometrics__Connector_Settings__c/fields/copadometrics__Last_Known_Status__c.field-meta.xml
<CustomField>
    <fullName>copadometrics__Last_Known_Status__c</fullName>
    <label>Last Known Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>