force-app/main/default/objects/copadometrics__Connector_Settings__c/fields/copadometrics__Last_Schema_Update_Date__c.field-meta.xml
<CustomField>
    <fullName>copadometrics__Last_Schema_Update_Date__c</fullName>
    <inlineHelpText>Last schema update operation timestamp that performed by you.</inlineHelpText>
    <label>Last Schema Update Date</label>
    <type>Date</type>
</CustomField>